# poligons-3d-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cfg
include/: Camera.hpp  Color.hpp  Config.hpp  DepthBuffer.hpp  Engine.hpp  Light.hpp  Mesh.hpp  Render.hpp
include/components/: Camera.hpp
include/components/geometry/: Mesh.hpp  Triangle.hpp
include/components/lightning/: Light.hpp
include/components/props/: Color.hpp
include/linalg/: Mat4x4.hpp  Triangle.hpp  Vec3d.hpp
include/math/: Mat4x4.hpp  Triangle.hpp  Vec2d.hpp  Vec3d.hpp
include/rendering/: DepthBuffer.hpp  Render.hpp
include/utils/: ConfigManager.hpp  Debug.hpp
src/: Camera.cpp  Color.cpp  DepthBuffer.cpp  Engine.cpp  Light.cpp  Main.cpp  Mesh.cpp  Render.cpp
src/components/: Camera.cpp
src/components/geometry/: Mesh.cpp  Triangle.cpp
src/components/lightning/: Light.cpp
src/components/props/: Color.cpp
src/linalg/: Mat4x4.cpp  Triangle.cpp  Vec3d.cpp
src/math/: Mat4x4.cpp  Triangle.cpp  Vec2d.cpp  Vec3d.cpp
src/rendering/: DepthBuffer.cpp  Render.cpp
src/utils/: ConfigManager.cpp
